crates/rome_formatter/tests/specs/prettier/cursor/file-start-with-comment-2.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: file-start-with-comment-2.js

---
# Input
```js
// hi lol
haha()<|>

```

# Output
```js
// hi lol
haha()<|>

```

# Errors
```
error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
  ┌─ file-start-with-comment-2.js:2:8
  │
2 │ haha()<|>
  │       -^ But this operator was encountered instead
  │       │ 
  │       This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ file-start-with-comment-2.js:2:9
  │
2 │ haha()<|>
  │        -^ But this operator was encountered instead
  │        │ 
  │        This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ''
  ┌─ file-start-with-comment-2.js:3:1
  │
3 │ 
  │ ^ Expected an expression here


```


